--- a/package.json
+++ b/package.json
@@ -184,7 +184,7 @@
   },
   "codegenConfig": {
     "name": "RNTurboLocationSpec",
-    "type": "modules",
+    "type": "all",
     "jsSrcsDir": "src",
     "outputDir": {
       "ios": "ios/generated",
