--- a/example/ios/TurboLocationExample/Info.plist
+++ b/example/ios/TurboLocationExample/Info.plist
@@ -32,8 +32,6 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +46,13 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Your location will be traced at frequent intervals and stored in database of app for showing your availability to users in their location and when you In route for service</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Your location will be traced at frequent intervals and stored in database of app for showing your availability to users in their location and when you In route for service</string>
+    <key>NSLocationUsageDescription</key>
+    <string>Your location will be traced at frequent intervals and stored in database of app for showing your availability to users in their location and when you In route for service</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Your location will be traced at frequent intervals and stored in database of app for showing your availability to users in their location and when you In route for service</string>
 </dict>
 </plist>
