feat: ios with liveUpdate and requestUpdating location

--- a/package.json
+++ b/package.json
@@ -185,7 +185,7 @@
   "codegenConfig": {
     "name": "RNTurboLocationSpec",
     "type": "all",
-    "jsSrcsDir": "src",
+    "jsSrcsDir": "src/spec",
     "outputDir": {
       "ios": "ios/generated",
       "android": "android/generated"
